--- a/index.html
+++ b/index.html
@@ -11,80 +11,53 @@
 <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
 <link rel="stylesheet" href="css/Google_MDL/material.min.css">
 <link rel="stylesheet" href="css/quiq_style.css">
+<link rel="stylesheet" href="css/erp_app_style.css">
 
 <script src="css/Google_MDL/material.min.js"></script>
 </head>
 <body>
-  
-  <div></div> 
-  <button id="login_btn">Login</button>
-  <div class="q_wrapper">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nunc mi ipsum faucibus vitae aliquet nec. Quam nulla porttitor massa id neque. At elementum eu facilisis sed odio morbi quis commodo odio. Ac tortor dignissim convallis aenean et tortor. Accumsan lacus vel facilisis volutpat est velit egestas dui id. Elementum pulvinar etiam non quam lacus suspendisse faucibus interdum posuere. At urna condimentum mattis pellentesque id. Vitae tempus quam pellentesque nec nam aliquam sem et tortor. Purus in massa tempor nec feugiat nisl pretium. Massa id neque aliquam vestibulum.
-
-Sollicitudin aliquam ultrices sagittis orci a. Ipsum suspendisse ultrices gravida dictum fusce ut placerat. Nunc non blandit massa enim. Mauris pharetra et ultrices neque ornare aenean euismod. In nulla posuere sollicitudin aliquam. Tellus mauris a diam maecenas sed. Vitae semper quis lectus nulla at volutpat diam. Enim nec dui nunc mattis enim ut tellus elementum. Vel risus commodo viverra maecenas accumsan lacus vel facilisis volutpat. Felis eget velit aliquet sagittis id consectetur purus. Quis imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. Massa sapien faucibus et molestie ac feugiat. Lobortis mattis aliquam faucibus purus in massa. A diam maecenas sed enim ut sem viverra aliquet. At consectetur lorem donec massa sapien faucibus et molestie ac. Nunc sed augue lacus viverra. Augue ut lectus arcu bibendum at varius vel pharetra vel.
-
-Eu feugiat pretium nibh ipsum consequat nisl vel pretium. Urna et pharetra pharetra massa massa ultricies mi quis. Vitae nunc sed velit dignissim. Ac ut consequat semper viverra nam libero justo. In dictum non consectetur a erat nam. Amet consectetur adipiscing elit pellentesque habitant. Tincidunt augue interdum velit euismod in pellentesque massa placerat. Faucibus pulvinar elementum integer enim neque volutpat. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. Elit sed vulputate mi sit amet mauris commodo quis. Augue ut lectus arcu bibendum at varius vel pharetra vel.
-
-Lacus sed turpis tincidunt id aliquet risus. Cras pulvinar mattis nunc sed blandit. Sit amet luctus venenatis lectus magna fringilla urna. Vitae congue mauris rhoncus aenean vel elit scelerisque mauris pellentesque. Est ante in nibh mauris cursus. In ante metus dictum at tempor commodo ullamcorper a lacus. Eget nunc scelerisque viverra mauris in. Et netus et malesuada fames. Leo urna molestie at elementum eu facilisis. Consectetur adipiscing elit pellentesque habitant morbi tristique. In arcu cursus euismod quis viverra nibh. Nunc mattis enim ut tellus elementum sagittis vitae et. Mattis rhoncus urna neque viverra justo nec ultrices. Enim nulla aliquet porttitor lacus. Quam vulputate dignissim suspendisse in est ante in nibh. Aliquet eget sit amet tellus cras. Aliquam vestibulum morbi blandit cursus risus at ultrices mi tempus. Eget egestas purus viverra accumsan in.
-
-Etiam dignissim diam quis enim lobortis scelerisque. Velit scelerisque in dictum non. Mattis nunc sed blandit libero volutpat. Ultrices tincidunt arcu non sodales neque. Tincidunt id aliquet risus feugiat in ante. Bibendum arcu vitae elementum curabitur. Et malesuada fames ac turpis egestas sed tempus. Orci a scelerisque purus semper eget duis at. Diam maecenas sed enim ut. Rutrum quisque non tellus orci ac auctor augue. Sodales ut eu sem integer vitae justo. Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Sit amet venenatis urna cursus eget. Pharetra massa massa ultricies mi quis hendrerit. Netus et malesuada fames ac turpis egestas integer eget.
-  </div>
-
-
-
-  <!-- Pop Ups-->
-  <div class="hidn" id="pop_login">
- <div class="pop_bgd flexBox">
-  <div class="forClick"></div>
-  <div class="login_box flexBox">
-    <div class="login_container">
-      <div class="login_title">LOGIN</div>
-      <div class="login_field">
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" type="text" id="sample3">
-          <label class="mdl-textfield__label" for="sample3">Username</label>
-        </div>
-        <i class="fa fa-user"></i>
-      </div>
-      <div class="login_field">
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <input class="mdl-textfield__input" type="password" id="sample3">
-          <label class="mdl-textfield__label" for="sample3">Password</label>
-        </div>
-        <i class="fa fa-lock"></i>
-      </div>
-      <div class="log_reminder">
-        <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-1">
-          <input type="checkbox" id="checkbox-1" class="mdl-checkbox__input">
-          <span class="mdl-checkbox__label">Keep Me Signed In</span>
-        </label>
-      </div>
-      <div class="log_btn_holder">
-        <button>SIGN IN <i class="fa fa-sign-in"></i></button>
-      </div>
-      <div class="link_forgot"><a href="#">Forgot Password?</a></div>
+<div class="side_panel" id="SidePnl">
+  <div class="quiq_logo flexBox al_cnt">
+    <div class="logo_icon"><img src="images/quiq_icon.png"></div>
+    <div class="cover_color"></div>
+    <div class="logo_holder">
+      <img src="images/quiq_logo.png">
     </div>
-    
+    <div class="ham_menu" id="hamMenu">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </div>
-</div> 
+  <div class="sideMenuX">
+    <ul>
+      <li><a href="#"><i class="fa fa-beer"></i><span class="linkTx">Purchase Invoice</span><span class="linkIcn"><i class="fa fa-angle-right"></i></span></a></li>
+      <li><a href="#"><i class="fa fa-beer"></i><span class="linkTx">Purchase Invoice</span><span class="linkIcn"><i class="fa fa-angle-right"></i></span></a></li>
+      <li><a href="#"><i class="fa fa-beer"></i><span class="linkTx">Purchase Invoice</span><span class="linkIcn"><i class="fa fa-angle-right"></i></span></a></li>
+      <li><a href="#"><i class="fa fa-beer"></i><span class="linkTx">Purchase Invoice</span><span class="linkIcn"><i class="fa fa-angle-right"></i></span></a></li>
+      <li><a href="#"><i class="fa fa-beer"></i><span class="linkTx">Purchase Invoice</span><span class="linkIcn"><i class="fa fa-angle-right"></i></span></a></li>
+      <li><a href="#"><i class="fa fa-beer"></i><span class="linkTx">Purchase Invoice</span><span class="linkIcn"><i class="fa fa-angle-right"></i></span></a></li>
+      <li><a href="#"><i class="fa fa-beer"></i><span class="linkTx">Purchase Invoice</span><span class="linkIcn"><i class="fa fa-angle-right"></i></span></a></li>
+      <li><a href="#"><i class="fa fa-beer"></i><span class="linkTx">Purchase Invoice</span><span class="linkIcn"><i class="fa fa-angle-right"></i></span></a></li>
+    </ul>
+  </div>
 </div>
-<div class="pop_closer" id="popClose">
-  <img src="images/close_button.png">
+<div class="content_panel expnd" class="CntPanel">
+  <div class="top_bar"></div>
 </div>
-
-
   
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script>
 $(document).ready(function(){
-    $("#login_btn").click(function(){
-        $("#pop_login, #popClose").show();
-        $(".q_wrapper").css("width","calc(100% - 400px)");
-    });
-    $(".forClick, #popClose").click(function(){
-        $("#pop_login, #popClose").hide();
-        $(".q_wrapper").css("width","100%");
+    $("#hamMenu").click(function(){
+        $(".ham_menu").toggleClass("clkd");
+        $(".logo_holder").toggleClass("ShwLogo");
+        $(".logo_icon").toggleClass("shwIcon");
+        $("#SidePnl").toggleClass("collpsd");
+        $("#CntPanel").toggleClass("expnd");
     });
 });
 </script>
