--- a/index.html
+++ b/index.html
@@ -107,6 +107,28 @@
       <a href="">Purchase</a><i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
       <span>Purchase Order</span>
     </div>
+    <div class="menu_tabs">
+      <ul class="nav nav-tabs">
+        <li class="active"><a data-toggle="tab" href="#homeTab">Home</a></li>
+        <li><a data-toggle="tab" href="#quickTab">Quick Access</a></li>
+        <li><a data-toggle="tab" href="#exitTab">Exit</a></li>
+      </ul>
+
+      <div class="tab-content">
+        <div id="homeTab" class="tab-pane fade in active">
+          <button class="tool_btn"><i class="fa fa-save" aria-hidden="true"></i> Save</button>
+          <button class="tool_btn"><i class="fa fa-times" aria-hidden="true"></i> Cancel</button>
+        </div>
+        <div id="quickTab" class="tab-pane fade">
+          <button class="tool_btn"><i class="fa fa-save" aria-hidden="true"></i> Save</button>
+          <button class="tool_btn"><i class="fa fa-times" aria-hidden="true"></i> Cancel</button>
+        </div>
+        <div id="exitTab" class="tab-pane fade">
+          <button class="tool_btn"><i class="fa fa-save" aria-hidden="true"></i> Save</button>
+          <button class="tool_btn"><i class="fa fa-times" aria-hidden="true"></i> Cancel</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
   
