--- a/quick_links.html
+++ b/quick_links.html
@@ -48,21 +48,9 @@
   <div class="top_bar flexBox al_cnt">
     <div class="client_name" id="clientName"><img src="images/DemoDuckLogo2_500px.png">DEMO CORP Inc.</div>
     <div class="notification_area flexBox al_rht al_cnt">
-      <ul class="navbar-right">
-        <li>
-          <a href="#" class="notify_alert"><span class="alrt_not"></span><i class="fa fa-bell-o"></i></a>
-        </li>
-        <li>
-          <a href="#" class="notify_msg"><span class="msg_not"></span><i class="fa fa-envelope-o"></i></a>
-        </li>
-        <li class="dropdown">
-          <a href="#" class="account_user dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user-o" aria-hidden="true"></i></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Logout</a></li>
-          </ul>
-        </li>
-      </ul>
+      <a href="#" class="notify_alert"><span class="alrt_not"></span><i class="fa fa-bell-o"></i></a>
+      <a href="#" class="notify_msg"><span class="msg_not"></span><i class="fa fa-envelope-o"></i></a>
+      <a href="#" class="account_user"><i class="fa fa-user-o" aria-hidden="true"></i></a>
     </div>
   </div>
   <div class="submenu_bar">
@@ -116,7 +104,7 @@
     </div>
     <div class="breadscrumb flexBox">
       <a href="">Purchase</a><i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-      <span>Purchase Order</span>
+      <span>Quick Links</span>
     </div>
     <div class="menu_tabs">
       <ul class="nav nav-tabs">
@@ -140,6 +128,21 @@
         </div>
       </div>
     </div>
+
+    <div class="content_wrap">
+      <div class="quick_tiles flexBox">
+        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-th-list" aria-hidden="true"></i><span>General Codes</span></a></div>
+        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-ticket" aria-hidden="true"></i><span>Voucher Master</span></a></div>
+        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-money" aria-hidden="true"></i><span>Currency</span></a></div>
+        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-address-book" aria-hidden="true"></i><span>Chart of Accounts</span></a></div>
+        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-university" aria-hidden="true"></i><span>Payment Terms</span></a></div>
+        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i><span>FinYear</span></a></div>
+        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-clock-o" aria-hidden="true"></i><span>Shifts</span></a></div>
+        
+      </div>
+    </div>
+    
+
   
 </div>
   
