--- a/payment_terms.html
+++ b/payment_terms.html
@@ -142,15 +142,19 @@
     </div>
 
     <div class="content_wrap">
-      <div class="quick_tiles flexBox">
-        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-th-list" aria-hidden="true"></i><span>General Codes</span></a></div>
-        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-ticket" aria-hidden="true"></i><span>Voucher Master</span></a></div>
-        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-money" aria-hidden="true"></i><span>Currency</span></a></div>
-        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-address-book" aria-hidden="true"></i><span>Chart of Accounts</span></a></div>
-        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-university" aria-hidden="true"></i><span>Payment Terms</span></a></div>
-        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i><span>FinYear</span></a></div>
-        <div class="metro_tile flexBox"><a href="#"><i class="fa fa-clock-o" aria-hidden="true"></i><span>Shifts</span></a></div>
-        
+      <div class="pad_10 bg_lite flexBox Qbox_100">
+        <div class="Qbox_33">
+          <!-- Textfield with Floating Label -->
+
+          <form action="#">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <input class="mdl-textfield__input" type="text" id="sample3">
+              <label class="mdl-textfield__label" for="sample3">Text...</label>
+            </div>
+          </form>
+
+        </div>
+        <div class="Qbox_67">sfddsf</div>
       </div>
     </div>
     
