--- a/2.financial_year.html
+++ b/2.financial_year.html
@@ -10,6 +10,8 @@
 <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
 <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css" />
 <link rel="stylesheet" href="css/Google_MDL/material.min.css">
+<link rel="stylesheet" href="css/getmdl-select.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="css/login_page.css">
 <link rel="stylesheet" href="css/erp_app_style.css">
 
@@ -115,8 +117,9 @@
     </nav>
     </div>
     <div class="breadscrumb flexBox">
-      <a href="#">Purchase</a><i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-      <a href="#">Purchase Order</a>
+      <a href="">Financial Year</a>
+      <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+      <a href="#">General</a>
     </div>
     <div class="menu_tabs">
       <ul class="nav nav-tabs">
@@ -140,11 +143,90 @@
         </div>
       </div>
     </div>
+
+    <div class="content_wrap">
+      <div class="pad_10 flexBox Qbox_100">
+        <div class="gnrl_tab">
+          <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#genr_tab_1">General</a></li>
+            <li><a data-toggle="tab" href="#genr_tab_2">FinYear Settings</a></li>
+          </ul>
+
+          <div class="tab-content">
+            <div id="genr_tab_1" class="tab-pane fade in active">
+              <div class="row">
+                <div class="col-sm-9">
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <div class="field_container">
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                          <input class="mdl-textfield__input" type="text" id="sample3">
+                          <label class="mdl-textfield__label" for="sample3">Code</label>
+                        </div>
+                        <!-- Floating Multiline Textfield -->
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                          <input class="mdl-textfield__input" type="text" id="sample3">
+                          <label class="mdl-textfield__label" for="sample3">Description</label>
+                        </div>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                          <input class="mdl-textfield__input" type="text" id="sample3">
+                          <label class="mdl-textfield__label" for="sample3">Periods</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="field_container">
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                          <input class="mdl-textfield__input" type="date" id="sample3" placeholder="">
+                          <label class="mdl-textfield__label" for="sample3">Start Date</label>
+                        </div>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                          <input class="mdl-textfield__input" type="date" id="sample3" placeholder="">
+                          <label class="mdl-textfield__label" for="sample3">End Date</label>
+                        </div>
+                        <!-- Select with floating label and arrow -->
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
+                            <input type="text" value="" class="mdl-textfield__input" id="drop_1" readonly>
+                            <input type="hidden" value="" name="drop_1">
+                            <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+                            <label for="drop_1" class="mdl-textfield__label">Status</label>
+                            <ul for="drop_1" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+                                <li class="mdl-menu__item" data-val="DEU">Open</li>
+                                <li class="mdl-menu__item" data-val="BLR">Option 2</li>
+                                <li class="mdl-menu__item" data-val="RUS">Option 3</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="field_container">
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                          <input class="mdl-textfield__input" type="text" id="sample3">
+                          <label class="mdl-textfield__label" for="sample3">Notes</label>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div id="genr_tab_2" class="tab-pane fade">
+              Kendo Grid Here.
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    
+
   
 </div>
   
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script src="js/getmdl-select.js"></script>
+
 <script>
 $(document).ready(function(){
     $("#hamMenu").click(function(){
