--- a/quick_links.html
+++ b/quick_links.html
@@ -115,8 +115,8 @@
     </nav>
     </div>
     <div class="breadscrumb flexBox">
-      <a href="">Purchase</a><i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-      <span>Quick Links</span>
+      <a href="#">Purchase</a><i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
+      <a href="#">Quick Links</a>
     </div>
     <div class="menu_tabs">
       <ul class="nav nav-tabs">
