--- a/4.posting_groups.html
+++ b/4.posting_groups.html
@@ -119,7 +119,7 @@
     <div class="breadscrumb flexBox">
       <a href="#">Accounts</a>
       <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-      <a href="#">Chart of Accounts</a>
+      <a href="#">Posting Groups</a>
     </div>
     <div class="menu_tabs">
       <ul class="nav nav-tabs">
@@ -171,7 +171,7 @@
                             <input type="text" value="" class="mdl-textfield__input" id="drop_4" readonly>
                             <input type="hidden" value="" name="drop_4">
                             <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                            <label for="drop_4" class="mdl-textfield__label">Parent Account Code</label>
+                            <label for="drop_4" class="mdl-textfield__label">Group Type</label>
                             <ul for="drop_4" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
                                 <li class="mdl-menu__item" data-val="DEU">Open</li>
                                 <li class="mdl-menu__item" data-val="BLR">Option 2</li>
@@ -181,60 +181,10 @@
                       </div>
                     </div>
                     <div class="col-sm-4">
-                      <div class="field_container">
-                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-                            <input type="text" value="" class="mdl-textfield__input" id="drop_5" readonly>
-                            <input type="hidden" value="" name="drop_5">
-                            <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                            <label for="drop_5" class="mdl-textfield__label">Currency</label>
-                            <ul for="drop_5" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-                                <li class="mdl-menu__item" data-val="EUR">Euro</li>
-                                <li class="mdl-menu__item" data-val="USD">Dollar</li>
-                                <li class="mdl-menu__item" data-val="INR">Indian Rupee</li>
-                            </ul>
-                        </div>
-                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-                            <input type="text" value="" class="mdl-textfield__input" id="drop_5" readonly>
-                            <input type="hidden" value="" name="drop_5">
-                            <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                            <label for="drop_5" class="mdl-textfield__label">Detail</label>
-                            <ul for="drop_5" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-                                <li class="mdl-menu__item" data-val="EUR">Parent</li>
-                                <li class="mdl-menu__item" data-val="USD">Option 2</li>
-                                <li class="mdl-menu__item" data-val="INR">Option 3</li>
-                            </ul>
-                        </div>
-                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                          <input class="mdl-textfield__input" type="text" id="sample3">
-                          <label class="mdl-textfield__label" for="sample3">Account Category</label>
-                        </div>
-                      </div>
+                      
                     </div>
                     <div class="col-sm-4">
-                      <div class="field_container">
-                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-                            <input type="text" value="" class="mdl-textfield__input" id="drop_6" readonly>
-                            <input type="hidden" value="" name="drop_6">
-                            <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                            <label for="drop_6" class="mdl-textfield__label">Account Type</label>
-                            <ul for="drop_6" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-                                <li class="mdl-menu__item" data-val="DEU">Open</li>
-                                <li class="mdl-menu__item" data-val="BLR">Option 2</li>
-                                <li class="mdl-menu__item" data-val="RUS">Option 3</li>
-                            </ul>
-                        </div>
-                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-                            <input type="text" value="" class="mdl-textfield__input" id="drop_7" readonly>
-                            <input type="hidden" value="" name="drop_7">
-                            <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                            <label for="drop_7" class="mdl-textfield__label">Cash Flow Activity</label>
-                            <ul for="drop_7" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-                                <li class="mdl-menu__item" data-val="DEU">Open</li>
-                                <li class="mdl-menu__item" data-val="BLR">Option 2</li>
-                                <li class="mdl-menu__item" data-val="RUS">Option 3</li>
-                            </ul>
-                        </div>
-                      </div>
+                      
                     </div>
                   </div>
                 </div>
