--- a/5.tax_master.html
+++ b/5.tax_master.html
@@ -277,7 +277,118 @@
               </div>
             </div>
             <div id="genr_tab_3" class="tab-pane fade">
-              Kendo Grid Here.
+              <div class="row">
+                <div class="col-sm-12">
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <div class="field_container padd_down_cutter">
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                          <input class="mdl-textfield__input" type="text" id="sample3">
+                          <label class="mdl-textfield__label" for="sample3">Tax Rate Percentage</label>
+                        </div>
+                        <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-3">
+                          <input type="checkbox" id="checkbox-3" class="mdl-checkbox__input">
+                          <span class="mdl-checkbox__label">Recoverable</span>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="col-sm-3">
+                      <div class="field_container flexBox al_cnt">
+                        <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-2">
+                          <input type="checkbox" id="checkbox-2" class="mdl-checkbox__input">
+                          <span class="mdl-checkbox__label">Apply Tax Rate to Add-On Cost</span>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="col-sm-3">
+                      <div class="field_container">
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
+                            <input type="text" value="" class="mdl-textfield__input" id="drop_8" readonly>
+                            <input type="hidden" value="" name="drop_8">
+                            <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+                            <label for="drop_8" class="mdl-textfield__label">Tax Limit Base</label>
+                            <ul for="drop_8" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+                                <li class="mdl-menu__item" data-val="DEU">Option 1</li>
+                                <li class="mdl-menu__item" data-val="BLR">Option 2</li>
+                                <li class="mdl-menu__item" data-val="RUS">Option 3</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-3">
+                      <div class="field_container">
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                          <input class="mdl-textfield__input" type="text" id="sample3">
+                          <label class="mdl-textfield__label" for="sample3">Max Tax Amount</label>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <div class="field_container">
+                        
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <div class="field_container flexBox al_cnt wrap_fl padd_down_cutter">
+                        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-1">
+                          <input type="radio" id="option-1" class="mdl-radio__button" name="options" value="1" checked>
+                        </label>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label radio_text_box">
+                          <input class="mdl-textfield__input" type="text" id="sample3">
+                          <label class="mdl-textfield__label" for="sample3">% Recoverable</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-3">
+                      <div class="field_container padd_down_cutter">
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
+                            <input type="text" value="" class="mdl-textfield__input" id="drop_9" readonly>
+                            <input type="hidden" value="" name="drop_9">
+                            <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+                            <label for="drop_9" class="mdl-textfield__label">Unit of Measure for Recovery</label>
+                            <ul for="drop_9" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+                                <li class="mdl-menu__item" data-val="DEU">Option 1</li>
+                                <li class="mdl-menu__item" data-val="BLR">Option 2</li>
+                                <li class="mdl-menu__item" data-val="RUS">Option 3</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <div class="field_container flexBox al_cnt wrap_fl padd_up_cutter">
+                        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option-2">
+                          <input type="radio" id="option-2" class="mdl-radio__button" name="options" value="2">
+                        </label>
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label radio_text_box">
+                          <input class="mdl-textfield__input" type="text" id="sample3">
+                          <label class="mdl-textfield__label" for="sample3">Amount Recoverable</label>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-3">
+                      <div class="field_container padd_up_cutter">
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
+                            <input type="text" value="" class="mdl-textfield__input" id="drop_10" readonly>
+                            <input type="hidden" value="" name="drop_10">
+                            <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+                            <label for="drop_10" class="mdl-textfield__label">Tax Account Code</label>
+                            <ul for="drop_10" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+                                <li class="mdl-menu__item" data-val="DEU">Option 1</li>
+                                <li class="mdl-menu__item" data-val="BLR">Option 2</li>
+                                <li class="mdl-menu__item" data-val="RUS">Option 3</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
 
