--- a/1.payment_terms.html
+++ b/1.payment_terms.html
@@ -117,7 +117,7 @@
     </nav>
     </div>
     <div class="breadscrumb flexBox">
-      <a href="">Purchase</a>
+      <a href="">Accounts</a>
       <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
       <a href="#">Payment Terms</a>
     </div>
