--- a/2.financial_year.html
+++ b/2.financial_year.html
@@ -117,9 +117,9 @@
     </nav>
     </div>
     <div class="breadscrumb flexBox">
-      <a href="">Financial Year</a>
+      <a href="">Accounts</a>
       <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-      <a href="#">General</a>
+      <a href="#">Financial Year</a>
     </div>
     <div class="menu_tabs">
       <ul class="nav nav-tabs">
