--- a/8.addon_cost.html
+++ b/8.addon_cost.html
@@ -119,7 +119,7 @@
     <div class="breadscrumb flexBox">
       <a href="">Accounts</a>
       <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-      <a href="#">Payment Method</a>
+      <a href="#">Add On Cost</a>
     </div>
     <div class="menu_tabs">
       <ul class="nav nav-tabs">
@@ -171,7 +171,7 @@
                             <input type="text" value="" class="mdl-textfield__input" id="drop_1" readonly>
                             <input type="hidden" value="" name="drop_1">
                             <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                            <label for="drop_1" class="mdl-textfield__label">Account</label>
+                            <label for="drop_1" class="mdl-textfield__label">COA</label>
                             <ul for="drop_1" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
                                 <li class="mdl-menu__item" data-val="DEU">Open</li>
                                 <li class="mdl-menu__item" data-val="BLR">Option 2</li>
@@ -182,34 +182,17 @@
                             <input type="text" value="" class="mdl-textfield__input" id="drop_2" readonly>
                             <input type="hidden" value="" name="drop_2">
                             <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                            <label for="drop_2" class="mdl-textfield__label">Type</label>
+                            <label for="drop_2" class="mdl-textfield__label">Distribution Method</label>
                             <ul for="drop_2" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
                                 <li class="mdl-menu__item" data-val="DEU">Open</li>
                                 <li class="mdl-menu__item" data-val="BLR">Option 2</li>
                                 <li class="mdl-menu__item" data-val="RUS">Option 3</li>
                             </ul>
                         </div>
-                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-                            <input type="text" value="" class="mdl-textfield__input" id="drop_3" readonly>
-                            <input type="hidden" value="" name="drop_3">
-                            <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                            <label for="drop_3" class="mdl-textfield__label">Credit Card Type</label>
-                            <ul for="drop_3" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-                                <li class="mdl-menu__item" data-val="DEU">Visa</li>
-                                <li class="mdl-menu__item" data-val="BLR">Master</li>
-                                <li class="mdl-menu__item" data-val="RUS">Maestro</li>
-                            </ul>
-                        </div>
-                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-                            <input type="text" value="" class="mdl-textfield__input" id="drop_4" readonly>
-                            <input type="hidden" value="" name="drop_4">
-                            <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                            <label for="drop_4" class="mdl-textfield__label">Used for</label>
-                            <ul for="drop_4" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-                                <li class="mdl-menu__item" data-val="DEU">Payments</li>
-                                <li class="mdl-menu__item" data-val="BLR">Collections</li>
-                            </ul>
-                        </div>
+                        <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-3">
+                          <input type="checkbox" id="checkbox-3" class="mdl-checkbox__input">
+                          <span class="mdl-checkbox__label">Automatically display on the addoncosts distribution screen</span>
+                        </label>
                       </div>
                     </div>
                     
