--- a/4.posting_groups.html
+++ b/4.posting_groups.html
@@ -119,7 +119,7 @@
     <div class="breadscrumb flexBox">
       <a href="#">Accounts</a>
       <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-      <a href="#">Posting Groups</a>
+      <a href="#">Post Group</a>
     </div>
     <div class="menu_tabs">
       <ul class="nav nav-tabs">
