--- a/administration_vendor.html
+++ b/administration_vendor.html
@@ -119,7 +119,7 @@
     <div class="breadscrumb flexBox">
       <a href="">Administration</a>
       <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-      <a href="#">User</a>
+      <a href="#">Vendor</a>
     </div>
     <div class="menu_tabs">
       <ul class="nav nav-tabs">
@@ -205,8 +205,9 @@
                             <a href="#userPanel2" class="mdl-tabs__tab">Address</a>
                             <a href="#userPanel3" class="mdl-tabs__tab">Accounting</a>
                             <a href="#userPanel4" class="mdl-tabs__tab">Finance Charges</a>
-                            <a href="#userPanel5" class="mdl-tabs__tab">User Details</a>
-                            <a href="#userPanel6" class="mdl-tabs__tab">Security</a>
+                            <a href="#userPanel7" class="mdl-tabs__tab">E-Commerce</a>
+                            <a href="#userPanel8" class="mdl-tabs__tab">Certification</a>
+                            <a href="#userPanel9" class="mdl-tabs__tab">Contract</a>
                         </div>
 
                         <div class="mdl-tabs__panel is-active" id="userPanel1">
@@ -474,168 +475,90 @@
                             </div>
                           </div>
                         </div>
-                        <div class="mdl-tabs__panel" id="userPanel5">
+                        <div class="mdl-tabs__panel" id="userPanel7">
                           <div class="row">
                             <div class="col-sm-4">
                               <div class="field_container padd_down_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                  <input class="mdl-textfield__input" type="text" id="sample3">
-                                  <label class="mdl-textfield__label" for="sample3">User Code</label>
-                                </div>
+                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-12">
+                                  <input type="checkbox" id="checkbox-12" class="mdl-checkbox__input">
+                                  <span class="mdl-checkbox__label">Allow Prepay Online</span>
+                                </label>
                               </div>
                             </div>
                             <div class="col-sm-4">
                               <div class="field_container padd_down_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-                                    <input type="text" value="" class="mdl-textfield__input" id="drop_14" readonly>
-                                    <input type="hidden" value="" name="drop_14">
-                                    <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                                    <label for="drop_14" class="mdl-textfield__label">Job Title</label>
-                                    <ul for="drop_14" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-                                        <li class="mdl-menu__item" data-val="DEU">Option 1</li>
-                                        <li class="mdl-menu__item" data-val="BLR">Option 1</li>
-                                        <li class="mdl-menu__item" data-val="RUS">Option 1</li>
-                                    </ul>
-                                </div>
+                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-13">
+                                  <input type="checkbox" id="checkbox-13" class="mdl-checkbox__input">
+                                  <span class="mdl-checkbox__label">Allow Shipping only to Billing Address</span>
+                                </label>
                               </div>
                             </div>
                             <div class="col-sm-4">
                               <div class="field_container padd_down_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                  <input class="mdl-textfield__input" type="text" id="sample3">
-                                  <label class="mdl-textfield__label" for="sample3">Date of Join</label>
-                                </div>
+                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-14">
+                                  <input type="checkbox" id="checkbox-14" class="mdl-checkbox__input">
+                                  <span class="mdl-checkbox__label">Allow COD Online</span>
+                                </label>
                               </div>
                             </div>
                           </div>
                           <div class="row">
                             <div class="col-sm-4">
                               <div class="field_container padd_down_cutter padd_up_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-                                    <input type="text" value="" class="mdl-textfield__input" id="drop_15" readonly>
-                                    <input type="hidden" value="" name="drop_15">
-                                    <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                                    <label for="drop_15" class="mdl-textfield__label">Location</label>
-                                    <ul for="drop_15" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-                                        <li class="mdl-menu__item" data-val="DEU">Option 1</li>
-                                        <li class="mdl-menu__item" data-val="BLR">Option 1</li>
-                                        <li class="mdl-menu__item" data-val="RUS">Option 1</li>
-                                    </ul>
-                                </div>
+                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-15">
+                                  <input type="checkbox" id="checkbox-15" class="mdl-checkbox__input">
+                                  <span class="mdl-checkbox__label">Allow Customer to Add Shipping Address</span>
+                                </label>
                               </div>
                             </div>
                             <div class="col-sm-4">
                               <div class="field_container padd_down_cutter padd_up_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                  <input class="mdl-textfield__input" type="text" id="sample3">
-                                  <label class="mdl-textfield__label" for="sample3">User Account ID</label>
-                                </div>
+                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-16">
+                                  <input type="checkbox" id="checkbox-16" class="mdl-checkbox__input">
+                                  <span class="mdl-checkbox__label">Allow Online Terms</span>
+                                </label>
                               </div>
                             </div>
                             <div class="col-sm-4">
                               <div class="field_container padd_down_cutter padd_up_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-                                    <input type="text" value="" class="mdl-textfield__input" id="drop_16" readonly>
-                                    <input type="hidden" value="" name="drop_16">
-                                    <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                                    <label for="drop_16" class="mdl-textfield__label">Position</label>
-                                    <ul for="drop_16" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-                                        <li class="mdl-menu__item" data-val="DEU">Option 1</li>
-                                        <li class="mdl-menu__item" data-val="BLR">Option 1</li>
-                                        <li class="mdl-menu__item" data-val="RUS">Option 1</li>
-                                    </ul>
-                                </div>
+                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-17">
+                                  <input type="checkbox" id="checkbox-17" class="mdl-checkbox__input">
+                                  <span class="mdl-checkbox__label">Allow Customer to Modify Shipping Address</span>
+                                </label>
                               </div>
                             </div>
                           </div>
                           <div class="row">
                             <div class="col-sm-4">
                               <div class="field_container padd_up_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
-                                    <input type="text" value="" class="mdl-textfield__input" id="drop_17" readonly>
-                                    <input type="hidden" value="" name="drop_17">
-                                    <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                                    <label for="drop_17" class="mdl-textfield__label">Department</label>
-                                    <ul for="drop_17" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
-                                        <li class="mdl-menu__item" data-val="DEU">Option 1</li>
-                                        <li class="mdl-menu__item" data-val="BLR">Option 1</li>
-                                        <li class="mdl-menu__item" data-val="RUS">Option 1</li>
-                                    </ul>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col-sm-4">
-                              <div class="field_container padd_up_cutter">
-                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-9">
-                                  <input type="checkbox" id="checkbox-9" class="mdl-checkbox__input">
-                                  <span class="mdl-checkbox__label">Login Notification</span>
+                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-18">
+                                  <input type="checkbox" id="checkbox-18" class="mdl-checkbox__input">
+                                  <span class="mdl-checkbox__label">Allow Customer to Modify Billing Address</span>
                                 </label>
                               </div>
                             </div>
+                            
+                          </div>
+                        </div>
+                        <div class="mdl-tabs__panel" id="userPanel8">
+                          <div class="row">
                             <div class="col-sm-4">
-                              <div class="field_container padd_up_cutter">
-                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-10">
-                                  <input type="checkbox" id="checkbox-10" class="mdl-checkbox__input">
-                                  <span class="mdl-checkbox__label">Exit Notification</span>
-                                </label>
+                              <div class="field_container">
+                                Kendo Grid Here
                               </div>
                             </div>
                           </div>
                         </div>
-                        <div class="mdl-tabs__panel" id="userPanel6">
+                        <div class="mdl-tabs__panel" id="userPanel9">
                           <div class="row">
                             <div class="col-sm-4">
-                              <div class="field_container padd_down_cutter">
-                                <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox-11">
-                                  <input type="checkbox" id="checkbox-11" class="mdl-checkbox__input">
-                                  <span class="mdl-checkbox__label">User of the System</span>
-                                </label>
-                              </div>
-                            </div>
-                            <div class="col-sm-4">
-                              <div class="field_container padd_down_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                  <input class="mdl-textfield__input" type="text" id="sample3">
-                                  <label class="mdl-textfield__label" for="sample3">User Name</label>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col-sm-4">
-                              <div class="field_container padd_down_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                  <input class="mdl-textfield__input" type="Password" id="sample3">
-                                  <label class="mdl-textfield__label" for="sample3">Pin</label>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="row">
-                            <div class="col-sm-4">
-                              <div class="field_container padd_up_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                  <input class="mdl-textfield__input" type="Password" id="sample3">
-                                  <label class="mdl-textfield__label" for="sample3">Confirm Pin</label>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col-sm-4">
-                              <div class="field_container padd_up_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                  <input class="mdl-textfield__input" type="Password" id="sample3">
-                                  <label class="mdl-textfield__label" for="sample3">Password</label>
-                                </div>
-                              </div>
-                            </div>
-                            <div class="col-sm-4">
-                              <div class="field_container padd_up_cutter">
-                                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                  <input class="mdl-textfield__input" type="Password" id="sample3">
-                                  <label class="mdl-textfield__label" for="sample3">Confirm Password</label>
-                                </div>
+                              <div class="field_container">
+                                Kendo Grid Here
                               </div>
                             </div>
                           </div>
                         </div>
+
                       </div>
                       </div>
                     </div>
