--- a/sales_selling_price.html
+++ b/sales_selling_price.html
@@ -187,7 +187,7 @@
           </ul>
 
           <div class="tab-content">
-            <div id="sellingTab1" class="tab-pane fade in active">
+            <div id="sellingTab1" class="tab-pane fade">
               <div class="row">
                 <div class="col-sm-12">
                   <div class="row">
@@ -212,7 +212,7 @@
                 </div>
               </div>
             </div>
-            <div id="sellingTab2" class="tab-pane fade">
+            <div id="sellingTab2" class="tab-pane fade in active">
               <div class="row">
                 <div class="col-sm-6">
                   <div class="row">
@@ -230,7 +230,7 @@
                             <input type="text" value="" class="mdl-textfield__input" id="outerDrop5" readonly>
                             <input type="hidden" value="" name="outerDrop5">
                             <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
-                            <label for="outerDrop5" class="mdl-textfield__label">Select</label>
+                            <label for="outerDrop5" class="mdl-textfield__label">Search Items By</label>
                             <ul for="outerDrop5" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
                                 <li class="mdl-menu__item" data-val="DEU">Option 1</li>
                                 <li class="mdl-menu__item" data-val="BLR">Option 2</li>
@@ -264,6 +264,32 @@
                         </div>
                       </div>
                     </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-12">
+                      <div class="inner_box_title">Price List Components</div>
+                      <div class="content_inner_box">
+                        <div class="row">
+                          <div class="col-sm-6"></div>
+                          <div class="col-sm-6"></div>
+                        </div>
+                        <div class="row">
+                          <div class="col-sm-6"></div>
+                          <div class="col-sm-6"></div>
+                        </div>
+                        <div class="row">
+                          <div class="col-sm-6"></div>
+                          <div class="col-sm-6"></div>
+                        </div>
+                        <div class="row">
+                          <div class="col-sm-6"></div>
+                          <div class="col-sm-6"></div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    
                   </div>
                 </div>
                 <div class="col-sm-6">
